tests/Fixtures/Torture/Bad/not_lvalue.g
// EXPECT G034
kernel { entry func Main() { 5 = 3; } }
